--- a/src/App.css
+++ b/src/App.css
@@ -43,4 +43,53 @@ nav ul{
 
 .Hero{
   display: flex;
+  align-items: center;
+  height: calc(100vh-72px);
+}
+
+.Hero h1{
+  font-weight: 800;
+  font-size: 108px;
+  line-height: 102px;
+}
+.Hero h1{
+  font-weight: 800;
+  font-size: 108px;
+  line-height: 102px;
+}
+.Hero p{
+  font-weight: 600;
+  color: var(--gray);
+  max-width: 400px;
+}
+
+.hero-btn{
+  display: flex;
+  gap: 40px;
+}
+
+.hero-btn button{
+  font-size: 24px;
+}
+
+.secondary-btn{
+  background: transparent;
+  color: var(--gray);
+  border: 1px solid gray;
+}
+
+.shopping p{
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.brand-icons{
+  display: flex;
+  gap: 16px;
+}
+
+.hero-content{
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
 }
